syntax = "proto3";
package Protocol;

option csharp_namespace = "Google.Protobuf.Protocol";

enum MsgId
{
	C_HELLO = 0;
	S_HELLO = 1;
	C_HELLO_DONE = 2;
	S_HELLO_DONE = 3;
	C_REGISTER = 4;
	S_REGISTER = 5;
	C_LOGIN = 6;
	S_LOGIN = 7;
	C_ENTER_ROOM = 8;
	S_ENTER_ROOM = 9;
	C_ENTER_MAP = 10;
	S_ENTER_MAP = 11;
	S_ENTER_MAP_BROADCAST = 12;
	C_LEAVE_ROOM = 13;
	S_LEAVE_ROOM = 14;
	C_LEAVE_MAP = 15;
	S_LEAVE_MAP = 16;
	C_CHAT = 17;
	S_CHAT = 18;
	C_MOVE_START = 19;
	S_MOVE_START = 20;
	C_MOVING = 21;
	S_MOVING = 22;
	C_MOVE_END = 23;
	S_MOVE_END = 24;
	C_JUMP = 25;
	S_JUMP = 26;
	C_FALL = 27;
	S_FALL = 28;
	C_LAND = 29;
	S_LAND = 30;
	C_SKILL = 31;
	S_SKILL = 32;
	S_HIT = 33;
	C_TEST = 34;
	S_TEST = 35;
	C_JUMP_END = 36;
	S_JUMP_END = 37;
}

enum CipherSuite
{
	AES_ECB = 0;
	AES_CBC = 1;
	AES_CFB = 2;
	AES_OFB = 3;
	AES_CTR = 4;
	ARIA_ECB = 5;
	ARIA_CBC = 6;
	ARIA_CFB = 7;
	ARIA_OFB = 8;
	ARIA_CTR = 9;
	HIGHT_ECB = 10;
	HIGHT_CBC = 11;
	HIGHT_CFB = 12;
	HIGHT_OFB = 13;
	HIGHT_CTR = 14;
	SPECK_ECB = 15;
	SPECK_CBC = 16;
	SPECK_CFB = 17;
	SPECK_OFB = 18;
	SPECK_CTR = 19;
	TWINE_ECB = 20;
	TWINE_CBC = 21;
	TWINE_CFB = 22;
	TWINE_OFB = 23;
	TWINE_CTR = 24;
	AES_GCM = 25;
	ARIA_GCM = 26;
	SPECK_GCM = 27;
}

enum MoveDir
{
	LEFT = 0;
	RIGHT = 1;
	UP = 2;
	DOWN = 3;
}

enum BaseState 
{
	IDLE = 0;
	MOVING = 1;
	JUMP = 2;
	FALL = 3;
	LAND = 4;
	SKILL = 5;
	DEAD = 6;
}

enum ChatType
{
	ALL = 0;
	ROOM = 1;
	MAP = 2;
}
