syntax = "proto3";

import "Enum_Security.proto";

package Security;
option csharp_namespace = "Google.Protobuf.Security";

message C_Hello
{
	CipherSuite cipherSuite = 1;
	bytes pubKeyX = 2;
	bytes pubKeyY = 3;
}

message S_Hello
{
	bool success = 1;
	bytes pubKeyX = 2;
	bytes pubKeyY = 3;
	bytes message = 4;
	bytes signature = 5;
	bytes salt = 6;
}

message C_Hello_Done
{
	bool success = 1;
}

message S_Hello_Done
{
	bool success = 1;
}